Pilote_hincado/jitfailure-dolfin_expression_b8c87bf5ab6574f15cf641a6874f555b/error.log
/tmp/tmppulsrmdu/dolfin_expression_b8c87bf5ab6574f15cf641a6874f555b.cpp: In member function ‘virtual void dolfin::dolfin_expression_b8c87bf5ab6574f15cf641a6874f555b::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmppulsrmdu/dolfin_expression_b8c87bf5ab6574f15cf641a6874f555b.cpp:63:25: error: expected primary-expression before ‘?’ token
           values[0] =   ? 0 : (x[1] > -I && x[1]< -I+(2*r) ? 2*x[1]+I: x[1]>=-I+(2*r) ? r : 0);
                         ^
/tmp/tmppulsrmdu/dolfin_expression_b8c87bf5ab6574f15cf641a6874f555b.cpp: In member function ‘virtual double dolfin::dolfin_expression_b8c87bf5ab6574f15cf641a6874f555b::get_property(std::__cxx11::string) const’:
/tmp/tmppulsrmdu/dolfin_expression_b8c87bf5ab6574f15cf641a6874f555b.cpp:75:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "I") return I;          if (name == "r") return r;
           ^~
/tmp/tmppulsrmdu/dolfin_expression_b8c87bf5ab6574f15cf641a6874f555b.cpp:75:47: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "I") return I;          if (name == "r") return r;
                                               ^~
